created Auth module

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.9",
         "lasserafn/php-initial-avatar-generator": "^4.2",
         "livewire/livewire": "^3.3",
+        "nwidart/laravel-modules": "^11.0",
         "robthree/twofactorauth": "^1.8",
         "spatie/laravel-permission": "^6.2"
     },
@@ -67,6 +68,11 @@
     "extra": {
         "laravel": {
             "dont-discover": []
+        },
+        "merge-plugin": {
+            "include": [
+                "Modules/*/composer.json"
+            ]
         }
     },
     "config": {
@@ -75,7 +81,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "wikimedia/composer-merge-plugin": true
         }
     },
     "minimum-stability": "dev",
