--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,8 +3,12 @@ includes:
 
 parameters:
 
+    excludePaths:
+        - Modules/*/tests/*
+
     paths:
         - app/
+        - Modules/
 
     # Level 9 is the highest level
     level: 8
