--- a/.env.example
+++ b/.env.example
@@ -71,5 +71,5 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-ADMIN_PREFIX=admin
+FUSE_PREFIX=admin
 
