--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,6 @@
 includes:
     - vendor/larastan/larastan/extension.neon
+    - phpstan-baseline.neon
 
 parameters:
 
@@ -10,13 +11,17 @@ parameters:
         - app/
         - Modules/
 
+    scanFiles:
+        - _ide_helper.php
+        - _ide_helper_models.php
+        - .phpstorm.meta.php
+
     # Level 9 is the highest level
     level: 8
 
     ignoreErrors:
-    - '#Cannot access property \$[a-zA-Z0-9\\_]+ on App\\Models\\User\|null#'
-    - '#Cannot access property \$[a-zA-Z0-9\\_]+ on App\\Models\\Role\|null#'
-    - '#Cannot call method [a-zA-Z0-9\\_]+\(\) on App\\Models\\User\|null#'
-    - '#Cannot call method [a-zA-Z0-9\\_]+\(\) on App\\Models\\Role\|null#'
+    #- '#Cannot access property \$[a-zA-Z0-9\\_]+ on App\\Models\\User\|null#'
+    #- '#Cannot call method [a-zA-Z0-9\\_]+\(\) on App\\Models\\User\|null#'
 
     checkGenericClassInNonGenericObjectType: false
+    treatPhpDocTypesAsCertain: false
