--- a/composer.json
+++ b/composer.json
@@ -9,32 +9,34 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "guzzlehttp/guzzle": "^7.2",
-        "intervention/image": "^2.7",
-        "laracasts/flash": "^3.2",
-        "laravel/framework": "^11.0",
-        "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9",
-        "lasserafn/php-initial-avatar-generator": "^4.2",
-        "livewire/livewire": "^3.3",
+        "caseyamcl/toc": "^3.1",
+        "guzzlehttp/guzzle": "^7.9.2",
+        "intervention/image": "^2.7.2",
+        "laracasts/flash": "^3.2.3",
+        "laravel/framework": "^11.33.2",
+        "laravel/sanctum": "^4.0.4",
+        "laravel/tinker": "^2.10",
+        "lasserafn/php-initial-avatar-generator": "^4.4",
+        "livewire/livewire": "^3.5.12",
         "mhmiton/laravel-modules-livewire": "^3.0",
-        "nwidart/laravel-modules": "^11.0",
-        "robthree/twofactorauth": "^1.8",
-        "spatie/laravel-permission": "^6.2"
+        "nwidart/laravel-modules": "^11.1.6",
+        "robthree/twofactorauth": "^1.8.2",
+        "spatie/laravel-permission": "^6.10.1",
+        "spatie/yaml-front-matter": "^2.0.9"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^3.0",
-        "fakerphp/faker": "^1.23",
+        "barryvdh/laravel-ide-helper": "^3.2.2",
+        "fakerphp/faker": "^1.24",
         "kkomelin/laravel-translatable-string-exporter": "^1.22",
-        "larastan/larastan": "^2.8",
-        "laravel/pint": "^1.13",
-        "laravel/sail": "^1.26",
-        "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.0",
-        "pestphp/pest": "^2.23",
-        "pestphp/pest-plugin-laravel": "^2.2",
-        "pestphp/pest-plugin-type-coverage": "^2.0",
-        "spatie/laravel-ignition": "^2.4"
+        "larastan/larastan": "^2.9.11",
+        "laravel/pint": "^1.18.1",
+        "laravel/sail": "^1.38",
+        "mockery/mockery": "^1.6.12",
+        "nunomaduro/collision": "^8.5",
+        "pestphp/pest": "^2.36",
+        "pestphp/pest-plugin-laravel": "^2.4",
+        "pestphp/pest-plugin-type-coverage": "^2.8.7",
+        "spatie/laravel-ignition": "^2.8"
     },
     "autoload": {
         "psr-4": {
@@ -52,7 +54,18 @@
         }
     },
     "scripts": {
-        "pint": "vendor/bin/pint",
+        "lint": "pint",
+        "test:lint": "pint --test",
+        "test:types": "phpstan analyse",
+        "test:arch": "pest --filter=arch",
+        "test:type-coverage": "pest --type-coverage --min=100",
+        "test:unit": "pest --parallel --coverage --min=100",
+        "test": [
+            "@lint",
+            "@test:types",
+            "@test:type-coverage",
+            "@test:unit"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
