update composer.json to rename test script to check and streamline linting process

--- a/composer.json
+++ b/composer.json
@@ -55,12 +55,11 @@
     },
     "scripts": {
         "lint": "pint",
-        "test:lint": "pint --test",
         "test:types": "phpstan analyse",
         "test:arch": "pest --filter=arch",
         "test:type-coverage": "pest --type-coverage --min=100",
         "test:unit": "pest --parallel --coverage --min=100",
-        "test": [
+        "check": [
             "@lint",
             "@test:types",
             "@test:type-coverage",
