--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
         "guzzlehttp/guzzle": "^7.9.2",
         "intervention/image": "^2.7.2",
         "laracasts/flash": "^3.2.3",
-        "laravel/framework": "^11.33.2",
-        "laravel/sanctum": "^4.0.4",
+        "laravel/framework": "^v12.2.0",
+        "laravel/sanctum": "^4.0.8",
         "laravel/tinker": "^2.10",
         "lasserafn/php-initial-avatar-generator": "^4.4",
         "livewire/livewire": "^3.5.12",
-        "mhmiton/laravel-modules-livewire": "^3.0",
-        "nwidart/laravel-modules": "^11.1.6",
+        "mhmiton/laravel-modules-livewire": "^5.1",
+        "nwidart/laravel-modules": "^12.0.1",
         "robthree/twofactorauth": "^1.8.2",
         "spatie/laravel-permission": "^6.10.1",
         "spatie/yaml-front-matter": "^2.0.9"
@@ -28,14 +28,14 @@
         "barryvdh/laravel-ide-helper": "^3.2.2",
         "fakerphp/faker": "^1.24",
         "kkomelin/laravel-translatable-string-exporter": "^1.22",
-        "larastan/larastan": "^2.9.11",
+        "larastan/larastan": "^v3.2.0",
         "laravel/pint": "^1.18.1",
         "laravel/sail": "^1.38",
         "mockery/mockery": "^1.6.12",
         "nunomaduro/collision": "^8.5",
-        "pestphp/pest": "^2.36",
-        "pestphp/pest-plugin-laravel": "^2.4",
-        "pestphp/pest-plugin-type-coverage": "^2.8.7",
+        "pestphp/pest": "^v3.7.4",
+        "pestphp/pest-plugin-laravel": "^v3.1.0",
+        "pestphp/pest-plugin-type-coverage": "^v3.4.0",
         "spatie/laravel-ignition": "^2.8"
     },
     "autoload": {
