--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -70,4 +70,4 @@ jobs:
                 run: ./vendor/bin/pint
 
             -   name: Run test suite
-                run: ./vendor/bin/pest --parallel
+                run: ./vendor/bin/pest
