--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,12 @@
         "laravel/sanctum": "^4.1.1",
         "laravel/tinker": "^2.10.1",
         "laravolt/avatar": "^6.2",
+        "league/commonmark": "^2.7",
         "livewire/livewire": "^3.6.3",
-        "robthree/twofactorauth": "^1.8.2",
-        "spatie/laravel-permission": "^6.17.0",
         "mhmiton/laravel-modules-livewire": "^5.1",
-        "nwidart/laravel-modules": "^12.0"
+        "nwidart/laravel-modules": "^12.0",
+        "robthree/twofactorauth": "^1.8.2",
+        "spatie/laravel-permission": "^6.17.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.5",
